--- a/index.html
+++ b/index.html
@@ -3,10 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" 
-    <title>Modepack Libo</title>
+    <meta name="description" content="Découvrez Libo, le modpack Minecraft ultime pour une expérience de jeu unique et personnalisée !">
+    <title>Libo Modpack Minecraft</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#accueil">Accueil</a></li>
+                <li><a href="#features">Caractéristiques</a></li>
+                <li><a href="#screenshots">Captures d'écran</a></li>
+                <li><a href="#download">Télécharger</a></li>
+            </ul>
+        </nav>
+        <div class="hero">
+            <h1>Libo Modpack Minecraft</h1>
+            <p>Plongez dans une nouvelle aventure avec le modpack Minecraft Libo !</p>
+            <a href="#download" class="btn">Télécharger Maintenant</a>
+        </div>
+    </header>
+
+    <section id="features">
+        <h2>Caractéristiques du Modpack</h2>
+        <div class="feature-grid">
+            <div class="feature">
+                <h3>Nouveaux Biomes</h3>
+                <p>Découvrez des biomes inédits qui apportent un souffle nouveau à votre monde Minecraft.</p>
+            </div>
+            <div class="feature">
+                <h3>Créatures Épiques</h3>
+                <p>Affrontez des créatures mythiques et déverrouillez des équipements puissants.</p>
+            </div>
+            <div class="feature">
+                <h3>Optimisations</h3>
+                <p>Des performances améliorées pour un jeu plus fluide même avec des mods gourmands.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="screenshots">
+        <h2>Captures d'écran</h2>
+        <div class="screenshot-gallery">
+            <img src="screenshot1.jpg" alt="Aperçu 1">
+            <img src="screenshot2.jpg" alt="Aperçu 2">
+            <img src="screenshot3.jpg" alt="Aperçu 3">
+        </div>
+    </section>
+
+    <section id="download">
+        <h2>Téléchargez Libo</h2>
+        <p>Libo est disponible sur différentes plateformes. Téléchargez-le et rejoignez l'aventure !</p>
+        <a href="lien-de-telechargement" class="btn download-btn">Télécharger</a>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Libo Modpack. Tous droits réservés.</p>
+        <ul>
+            <li><a href="#">Conditions d'utilisation</a></li>
+            <li><a href="#">Politique de confidentialité</a></li>
+        </ul>
+    </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
