--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2024 Palaroad Modpack. Tous droits réservés.</p>
+        <p>&copy; 2024 Palaroad Modpack Tous droits réservés.</p>
     </footer>
 
     <script src="script.js"></script>
