--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             <span class="arrow right-arrow" onclick="nextImage()">&#10095;</span>
         </div>
     </section>
+
+    <section id="Maj">
+        <h2> <center>Derniere mise a jour ModPack </center> </h2> 
+    <center>    Derniere Maj : Publication du ModPack 09/10/2024 </center>
+    </section>
     <footer>
         <p>&copy; 2024 Palaroad Modpack Tous droits réservés.</p>
     </footer>
