Modification de certain mod est optimisations ajout d'une page download 11/10/2024

--- a/Download-New-Gen.html
+++ b/Download-New-Gen.html
@@ -14,7 +14,25 @@
             <a href="https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD" class="btn download-btn">Télécharger Maintenant 1.16.5</a>
         </div>
         <br>
-        <p> D'autre version sont a venir prochainement.</p>
+        <br>
+        <div class="hero">
+        <a href="LinkV1.17.1" class="btn DL1-btn">Télécharger Maintenant 1.17.1 </a>
+    </div>
+    <br>
+    <br>
+    <div class="hero">
+        <a href="LinkV1.18.2" class="btn DL2-btn">Télécharger Maintenant 1.18.2 </a>
+    </div>
+    <br>
+    <br>
+    <div class="hero">
+        <a href="LinkV1.19.1" class="btn DL3-btn">Télécharger Maintenant 1.19.1 </a>
+    </div>
+    <br>
+    <br>
+    <div class="hero">
+        <a href="LinkV1.20.1" class="btn DL4-btn">Télécharger Maintenant 1.20.1 </a>
+    </div>
 <br>
 <br>
     <div class="button-container">
