--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="hero">
             <h1>Palaroad Modpack Minecraft</h1>
             <p>Plongez dans une nouvelle aventure avec le modpack Minecraft Palaroad !</p>
-            <a href="https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD" class="btn download-btn">Télécharger Maintenant</a>
+            <a href="https://tomigun212.github.io/Palaroad/Download" class="btn download-btn">Télécharger Maintenant</a>
         </div>
     </header>
 
@@ -56,7 +56,7 @@
 
     <section id="Maj">
         <h2> <center>Derniere mise a jour ModPack </center> </h2> 
-    <center>    Derniere Maj : Publication du ModPack 09/10/2024 </center>
+    <center>  Derniere Maj : Modification de certain mod est optimisations ajout d'une page download 11/10/2024 </center>
     </section>
     <footer>
         <p>&copy; 2024 Palaroad Modpack Tous droits réservés.</p>
