fix ajout de la page contact

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <div class="hero">
-            <h1>Palaroad Modpack Minecraft</h1>
-            <p>Plongez dans une nouvelle aventure avec le modpack Minecraft Palaroad !</p>
-            <a href="https://tomigun212.github.io/Palaroad/Download" class="btn download-btn">Télécharger Maintenant</a>
+        <center>   <h1>Palaroad Modpack Minecraft</h1> </center>
+          <center>  <p>Plongez dans une nouvelle aventure avec le modpack Minecraft Palaroad !</p> </center>
+           <center> <a href="https://tomigun212.github.io/Palaroad/Download" class="btn download-btn">Télécharger Maintenant</a> </center>
         </div>
     </header>
 
@@ -59,7 +59,10 @@
     <center>  Derniere Maj : Modification de certain mod est optimisations ajout d'une page download 11/10/2024 </center>
     </section>
     <footer>
-        <p>&copy; 2024 Palaroad Modpack Tous droits réservés.</p>
+        <div class="button-container">
+            <button class="btn btn-Contact" onclick="window.location.href='Link'"> Contactez-nous  </button>
+        </div>  
+       <center> <p>&copy; 2024 Palaroad Modpack Tous droits réservés.</p> </center>
     </footer>
 
     <script src="script.js"></script>
