--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
     <footer>
         <div class="button-container">
-            <button class="btn btn-Contact" onclick="window.location.href='Link'"> Contactez-nous  </button>
+            <button class="btn btn-Contact" onclick="window.location.href='https://tomigun212.github.io/Palaroad/contact'"> Contactez-nous  </button>
         </div>  
        <center> <p>&copy; 2024 Palaroad Modpack Tous droits réservés.</p> </center>
     </footer>
