--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
             height: 100vh;
             color: white;
             text-align: center;
+            overflow: hidden;
         }
         .btn {
     background-color: #fefefe;
