Ajout Page Journal des modification est modification en consequence

--- a/Download.html
+++ b/Download.html
@@ -9,17 +9,22 @@
 <body>
     <header>
         <div class="hero">
-            <h1>Palaroad Telechargement</h1>
+           <center><h1>Palaroad Telechargement</h1>
             <p>Voici toute les version ou vous pouver avoir notre ModPack</p>
-            <a href="https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD" class="btn download-btn">Télécharger Maintenant 1.16.5</a>
+             <a href="https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD" class="btn download-btn">Télécharger Maintenant 1.16.5</a> </center> 
         </div>
         <br>
-        <p> D'autre version sont a venir prochainement.</p>
+     <center>  <p> D'autre version sont a venir prochainement.</p> </center>  
 <br>
 <br>
     <div class="button-container">
-        <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Retourner a l'acceuil  </button>
+     <center>   <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Retourner a l'acceuil  </button> </center>
     </div>  
-    </header>
+    <br>
+    <br>
+    <div class="button-container">
+        ‎ ‎ <button class="btn btn-Journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Journal des modification  </button> 
+    </div> 
+</header>
 </body>
 </html>
