--- a/Download-New-Gen.html
+++ b/Download-New-Gen.html
@@ -9,35 +9,32 @@
 <body>
     <header>
         <div class="hero">
-            <h1>Palaroad Telechargement</h1>
+            <center>   <h1>Palaroad Telechargement</h1>
             <p>Voici toute les version ou vous pouver avoir notre ModPack</p>
-            <a href="https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD" class="btn download-btn">Télécharger Maintenant 1.16.5</a>
-        </div>
-        <br>
-        <br>
-        <div class="hero">
-        <a href="LinkV1.17.1" class="btn DL1-btn">Télécharger Maintenant 1.17.1 </a>
+            <a href="https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD" class="btn download-btn">Télécharger Maintenant 1.16.5</a></center>
+      </div>
+    <br>
+    <br>
+    <div class="hero">
+        <center>   <a href="LinkV1.18.2" class="btn DL2-btn">Télécharger Maintenant 1.18.2 </a>
     </div>
     <br>
     <br>
     <div class="hero">
-        <a href="LinkV1.18.2" class="btn DL2-btn">Télécharger Maintenant 1.18.2 </a>
+        <center>  <a href="LinkV1.19.1" class="btn DL3-btn">Télécharger Maintenant 1.19.1 </a>
     </div>
     <br>
     <br>
     <div class="hero">
-        <a href="LinkV1.19.1" class="btn DL3-btn">Télécharger Maintenant 1.19.1 </a>
+        <center>    <a href="LinkV1.20.1" class="btn DL4-btn">Télécharger Maintenant 1.20.1 </a>
     </div>
-    <br>
-    <br>
-    <div class="hero">
-        <a href="LinkV1.20.1" class="btn DL4-btn">Télécharger Maintenant 1.20.1 </a>
-    </div>
-<br>
 <br>
     <div class="button-container">
-        <button class="btn btn-Quit" onclick="window.location.href='Link'"> Retourner a l'acceuil  </button>
+        <center>    <button class="btn btn-Quit" onclick="window.location.href='Link'"> Retourner a l'acceuil  </button> 
     </div>  
+    <div class="button-container">
+        ‎ ‎ <button class="btn btn-Journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Journal des modification  </button> 
+    </div> 
     </header>
 </body>
 </html>
