Ajout Acces page journal

--- a/Download-New-Gen.html
+++ b/Download-New-Gen.html
@@ -33,7 +33,7 @@
         <center>    <button class="btn btn-Quit" onclick="window.location.href='Link'"> Retourner a l'acceuil  </button> 
     </div>  
     <div class="button-container">
-        ‎ ‎ <button class="btn btn-Journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Journal des modification  </button> 
+        ‎ ‎ <button class="btn btn-Journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Journal-Modif'"> Journal des modification  </button> 
     </div> 
     </header>
 </body>
