--- a/Download.html
+++ b/Download.html
@@ -23,7 +23,7 @@
     <br>
     <br>
     <div class="button-container">
-        ‎ ‎ <button class="btn btn-Journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Journal des modification  </button> 
+        ‎ ‎ <button class="btn btn-Journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Journal-Modif'"> Journal des modification  </button> 
     </div> 
 </header>
 </body>
