--- a/Journal-Modif.html
+++ b/Journal-Modif.html
@@ -30,6 +30,25 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+        
+        .btn {
+             color: white;
+            padding: 15px 30px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        } 
+        .btn-Quit {
+            background-color: red;
+        }
+
+        .btn-Quit:hover {
+            background-color: black;
+        }
+             
+
+
 
         h1, h2 {
             color: #ffffff;
@@ -76,5 +95,8 @@
         </ul>
     </div>
 </div>
+<div class="button-container">
+ <center> <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Download'"> Retourner a la page de Telechargement  </button> 
+</div> 
 </body>
 </html>
