--- a/Journal-Modif.html
+++ b/Journal-Modif.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Journal des Modifications - </title>
+    <title>Journal des Modifications - Palaroad </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -78,7 +78,7 @@
 <body>
 
 <header>
-    <h1>Journal des Modifications - Mod Minecraft</h1>
+    <h1>Journal des Modifications - Palaroad</h1>
 </header>
 
 <div class="container">
