--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section id="Maj">
         <h2> <center>Derniere mise a jour ModPack </center> </h2> 
-    <center>  Derniere Maj : Modification de certain mod est optimisations ajout d'une page download 11/10/2024 </center>
+    <center>  Derniere Maj : Ajout de la page journal de modification grace au bouton Telechargement avec des precision sur les mod 13/10/2024 </center>
     </section>
     <footer>
         <div class="button-container">
