--- a/Download-New-Gen.html
+++ b/Download-New-Gen.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0;url=Maintenance.html">
     <link href="Down.css" rel="stylesheet">
     <title>Telechargement Palaroad</title>
 </head>
