--- a/Maintenance.html
+++ b/Maintenance.html
@@ -58,7 +58,7 @@
 		<br>
 		<main>
         <div class="button-container">
-            <button class="btn btn-Quatre" onclick="window.location.href='file:https://tomigun212.github.io/Palaroad/'">Ressayer</button>
+            <button class="btn btn-Quatre" onclick="window.location.href='https://tomigun212.github.io/Palaroad/index.html'">Ressayer</button>
         </div>               
     </div>
 </body>
