--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="refresh" content="0;url=Maintenance.html">
     <meta name="description" content="Découvrez Palaroad, le modpack Minecraft ultime pour une expérience de jeu unique et personnalisée !">
     <title>Palaroad Minecraft</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <header>
@@ -67,7 +67,7 @@
        <center> <p>&copy; 2024 Palaroad Modpack Tous droits réservés.</p> </center>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="Java/script.js"></script>
 </body>
 </html>
 
