--- a/Maintenance.html
+++ b/Maintenance.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maintenance Palaroad </title>
-	<link href="Maintenance.css" rel="stylesheet">
+	<link href="CSS/Maintenance.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
