--- a/server.html
+++ b/server.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0;url=Maintenance.html">
     <title>Serveur Minecraft - Palaroad</title>
-    <link rel="stylesheet" href="server.css">
+    <link rel="stylesheet" href="CSS/server.css">
 </head>
 <body>
     <header>
@@ -70,7 +70,7 @@
         </div>
     </section>
 
-    <script src="script2.js"></script>
+    <script src="Java/script2.js"></script>
 </body>
 </html>
 
