Fin de maintenance Bug Fix

--- a/server.html
+++ b/server.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=Maintenance.html">
+    <met http-equiv="refresh" content="0;url=Maintenance.html">
     <title>Serveur Minecraft - Palaroad</title>
     <link rel="stylesheet" href="CSS/server.css">
 </head>
