--- a/Download.html
+++ b/Download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=Maintenance.html">
+    <met http-equiv="refresh" content="0;url=Maintenance.html">
     <link href="CSS/Down.css" rel="stylesheet">
     <title>Telechargement Palaroad</title>
 </head>
