--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=Maintenance.html">
+    <met http-equiv="refresh" content="0;url=Maintenance.html">
     <meta name="description" content="Découvrez Palaroad, le modpack Minecraft ultime pour une expérience de jeu unique et personnalisée !">
     <title>Palaroad Minecraft</title>
     <link rel="stylesheet" href="CSS/styles.css">
