--- a/Journal-Modif.html
+++ b/Journal-Modif.html
@@ -86,13 +86,14 @@
     <h2>Versions récentes</h2>
 
     <div class="version">
-        <h3>Version 1.0.0 <span class="date">(9 octobre 2024)</span> [Version : 1.16.5]</h3>
+        <h3>Version 1.0.0 <span class="date">(16 octobre 2024)</span> [Version : 1.16.5]</h3>
         <ul>
             <li>Lancement officiel du mod !</li>
             <li>Ajout de nouveaux biomes : Plus de 80 nouveau biomes</li>
             <li>Introduction de nouvelles créatures : Nouveau Spawner de mob est decouverte des grotes .</li>
             <li>Première version stable avec toutes les fonctionnalités principales.</li>
             <li>Nouveau Minerai multiple ( Paladium, Endium, Metal, Minerai sous marin) </li>
+            <li>Beaucoup de changement sur le site internet Fix de gros bug</li>
         </ul>
     </div>
 </div>
