--- a/Test_Page/index-New.html
+++ b/Test_Page/index-New.html
@@ -6,7 +6,7 @@
     <met http-equiv="refresh" content="0;url=Maintenance.html">
     <meta name="description" content="Découvrez Palaroad, le modpack Minecraft ultime pour une expérience de jeu unique et personnalisée !">
     <title>Palaroad Minecraft</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="styles-new.css">
 </head>
 <body>
     <header>
