--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <met http-equiv="refresh" content="0;url=Maintenance.html">
+    <meta http-equiv="refresh" content="0;url=Maintenance.html">
     <title>Contactez-nous</title>
     <style>
         body {
