Maintenance est correction de bug + refonte de la page contact ajout de nouveauter page principal

--- a/Download.html
+++ b/Download.html
@@ -12,7 +12,7 @@
         <div class="hero">
            <center><h1>Palaroad Telechargement</h1>
             <p>Voici toute les version ou vous pouver avoir notre ModPack</p>
-             <a href="https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD" class="btn download-btn">Télécharger Maintenant 1.16.5</a> </center> 
+            <button class="btn btn-down" onclick="window.location.href='https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD'"> Telecharger Maintenant 1.16.5   </button> 
         </div>
         <br>
      <center>  <p> D'autre version sont a venir prochainement.</p> </center>  
@@ -21,11 +21,6 @@
     <div class="button-container">
      <center>   <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Retourner a l'acceuil  </button> </center>
     </div>  
-    <br>
-    <br>
-    <div class="button-container">
-        ‎ ‎ <button class="btn btn-Journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Journal-Modif'"> Journal des modification  </button> 
-    </div> 
 </header>
 </body>
 </html>
