--- a/Test_Page/index-New.html
+++ b/Test_Page/index-New.html
@@ -13,7 +13,7 @@
         <div class="hero">
         <center>   <h1>Palaroad Modpack Minecraft</h1> </center>
           <center>  <p>Plongez dans une nouvelle aventure avec le modpack Minecraft Palaroad !</p> </center>
-           <center> <a href="https://tomigun212.github.io/Palaroad/Download" class="btn download-btn">Télécharger Maintenant</a> </center>
+           <center>  <button class="btn btn-down" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Download'"> Telecharger Maintenant </button> </center>
         </div>
     </header>
 
@@ -55,9 +55,22 @@
         </div>
     </section>
 
+    <section id="server">
+        <h2>Serveur Minecraft</h2>
+        <br>
+        <h3>Pour jouer sur le serveur de Palaroad cliquer sur le bouton ci - dessous</h3>
+        <br>
+        <div class="button-container">
+            <button class="btn btn-server" onclick="window.location.href='https://tomigun212.github.io/Palaroad/server'"> Rejoindre le serveur  </button>
+        </div>  
+    </section>
+
     <section id="Maj">
         <h2> <center>Derniere mise a jour ModPack </center> </h2> 
     <center>  Derniere Maj : Fin de la maintenance beaucoup de bug Fix 16/10/2024 </center>
+    <center> <div class="button-container">
+        <button class="btn btn-journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/server'"> Journal des modification  </button>
+    </div>  </center>
     </section>
     <footer>
         <div class="button-container">
