--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="hero">
         <center>   <h1>Palaroad Modpack Minecraft</h1> </center>
           <center>  <p>Plongez dans une nouvelle aventure avec le modpack Minecraft Palaroad !</p> </center>
-           <center> <a href="https://tomigun212.github.io/Palaroad/Download" class="btn download-btn">Télécharger Maintenant</a> </center>
+           <center>         <div class="button-container">
+            <button class="btn btn-down" onclick="window.location.href='https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD'"> Telecharger Maintenant  </button>
+        </div>   </center>
         </div>
     </header>
 
@@ -55,16 +57,28 @@
         </div>
     </section>
 
+    <section id="server">
+        <h2>Serveur Minecraft</h2>
+        <h3>Pour jouer sur le serveur de Palaroad cliquer sur le bouton ci - dessous</h3>
+        <div class="button-container">
+            <button class="btn btn-serv" onclick="window.location.href='https://tomigun212.github.io/Palaroad/server'"> Rejoindre le serveur minecraft  </button>
+        </div>  
+    </section>
+
     <section id="Maj">
         <h2> <center>Derniere mise a jour ModPack </center> </h2> 
     <center>  Derniere Maj : Fin de la maintenance beaucoup de bug Fix 16/10/2024 </center>
+    <br>
+    <div class="button-container">
+        <button class="btn btn-journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Journal-Modif'"> Acceder au journal des modification  </button>
+    </div> 
     </section>
     <footer>
+
+        <p><h2>Contacter - nous</h2></p>
         <div class="button-container">
             <button class="btn btn-Contact" onclick="window.location.href='https://tomigun212.github.io/Palaroad/contact'"> Contactez-nous  </button>
         </div>  
-
-       <center> <p>&copy; 2024 Palaroad Modpack Tous droits réservés.</p> </center>
     </footer>
 
     <script src="Java/script.js"></script>
