--- a/Wiki.html
+++ b/Wiki.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0;url=Maintenance.html"></met>
     <link href="CSS/Wiki.css" rel="stylesheet"
     <title>Wiki de tout les mod</title>
 </head>
