--- a/server.html
+++ b/server.html
@@ -56,7 +56,7 @@
                 <img src="https://i.imgur.com/f25f04S.jpeg" alt="Aperçu 2">
                 <img src="https://i.imgur.com/Fminc2J.png" alt="Aperçu 3">
                 <img src="https://i.imgur.com/9rMB7ay.jpeg" alt="Aperçu 4">
-                <img src="https://imgur.com/90b4ade6-b214-4992-9bb7-244854153ac8" alt="Aperçu 5">
+                <img src="https://i.imgur.com/e7wTeRS.png" alt="Aperçu 5">
                 <img src="https://i.imgur.com/TMRUPbD.jpeg" alt="Aperçu 6">
             </div>
             <span class="arrow right-arrow" onclick="nextImage()">&#10095;</span>
@@ -67,7 +67,7 @@
         <h2>Nous Rejoindre</h2>
         <br>
         <div class="join-buttons">
-            <a href="https://tomigun212.github.io/Palaroad/contact" class="join-link">Page de Contact</a>
+            <a href="https://tomigun212.github.io/Palaroad/contact" class="join-link">Contact</a>
             <a href="https://discord.gg/uX8dNJV6vX" class="join-link discord-link" target="_blank">Rejoindre le Discord</a>
         </div>
     </section>
