--- a/Journal-Modif.html
+++ b/Journal-Modif.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=Maintenance.html">
+    <met http-equiv="refresh" content="0;url=Maintenance.html">
     <title>Journal des Modifications - Palaroad </title>
     <link rel="stylesheet" href="CSS/Journal.css">
 <header>
@@ -26,7 +26,7 @@
     </div>
 </div>
 <div class="button-container">
- <center> <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Download'"> Retourner a la page de Telechargement  </button> 
+ <center> <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Retourner a l'accueil </button> 
 </div> 
 </body>
 </html>
