Derniere Maj : Fin de la maintenance Retablissement de tout le site plus publication de la version 1.18.2 du modpack 18/10/2024

--- a/Download.html
+++ b/Download.html
@@ -12,10 +12,11 @@
         <div class="hero">
            <center><h1>Palaroad Telechargement</h1>
             <p>Voici toute les version ou vous pouver avoir notre ModPack</p>
-            <button class="btn btn-down" onclick="window.location.href='https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD'"> Telecharger Maintenant 1.16.5   </button> 
+            <button class="btn btn-down" onclick="window.location.href='https://mega.nz/folder/H0M0nIZb#P70lOtcup8t_rWkNajqJng'"> Telecharger Maintenant 1.16.5   </button> 
         </div>
-        <br>
-     <center>  <p> D'autre version sont a venir prochainement.</p> </center>  
+      <center>  <div>
+             <button class="btn btn-down2" onclick="window.location.href='https://mega.nz/folder/3gUU3ToD#THAg9LjaXlK-Zy583_MunA'"> Telecharger Maintenant 1.18.2   </button> 
+   </center>  </div>
 <br>
 <br>
     <div class="button-container">
