--- a/Journal-Modif.html
+++ b/Journal-Modif.html
@@ -25,6 +25,17 @@
         </ul>
     </div>
 </div>
+
+<div class="version">
+    <h3>Version 1.1.0 <span class="date">(18 octobre 2024)</span> [Version : 1.18.2]</h3>
+    <ul>
+        <li>Lancement officiel de la version 1.18.2 du mod</li>
+        <li>Ajout de nouveaux biomes : Plus de 80 nouveau biomes</li>
+        <li>Introduction de nouvelles créatures : Nouveau Spawner de mob est decouverte des grotes .</li>
+        <li>Nouveau Minerai multiple ( Paladium, Endium, Metal) </li>
+    </ul>
+</div>
+</div>
 <div class="button-container">
  <center> <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Retourner a l'accueil </button> 
 </div> 
