--- a/Wiki.html
+++ b/Wiki.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=Maintenance.html"></met>
-    <link href="CSS/Wiki.css" rel="stylesheet"
-    <title>Wiki de tout les mod</title>
-</head>
-<body>
-    
+    <met http-equiv="refresh" content="0;url=Maintenance.html">
+    <title>Journal des Modifications - Palaroad </title>
+    <link rel="stylesheet" href="CSS/Wiki.css">
+<header>
+    <h1>Wiki - Palaroad</h1>
+</header>
+
+<div class="container">
+    <h2>Versions récentes</h2>
+
+    <div class="version">
+    <center> <h3>Palamod <span class="date"></span> </h3> </center>
+        <ul>
+            <div class="button-container">
+                <center> <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Acceder au wiki du mod </button> 
+               </div> 
+        </ul>
+    </div>
+</div>
+<br>
+<div class="container">
+    <h2>Versions récentes</h2>
+
+    <div class="version">
+    <center> <h3>Test <span class="date"></span> </h3> </center>
+        <ul>
+            <div class="button-container">
+                <center> <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Acceder au wiki du mod </button> 
+               </div> 
+        </ul>
+    </div>
+</div>
+<div class="button-container">
+ <center> <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Retourner a l'accueil </button> 
+</div> 
 </body>
 </html>
