--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section id="Maj">
         <h2> <center>Derniere mise a jour ModPack </center> </h2> 
-    <center>  Derniere Maj : Fin de la maintenance beaucoup de bug Fix 16/10/2024 </center>
+    <center>  Derniere Maj : Fin de la maintenance Retablissement de tout le site plus publication de la version 1.18.2 du modpack 18/10/2024 </center>
     <br>
     <div class="button-container">
         <button class="btn btn-journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Journal-Modif'"> Acceder au journal des modification  </button>
