--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <center>   <h1>Palaroad Modpack Minecraft</h1> </center>
           <center>  <p>Plongez dans une nouvelle aventure avec le modpack Minecraft Palaroad !</p> </center>
            <center>         <div class="button-container">
-            <button class="btn btn-down" onclick="window.location.href='https://1drv.ms/u/c/fa54d5d0be98683d/EZckbJ6clc1Ep5t6WVg_pxgB0oyDksifgBEk_Lv4-tkt_Q?e=zdaSaD'"> Telecharger Maintenant  </button>
+            <button class="btn btn-down" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Download'"> Telecharger Maintenant  </button>
         </div>   </center>
         </div>
     </header>
