--- a/Journal-Modif.html
+++ b/Journal-Modif.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <met http-equiv="refresh" content="0;url=Maintenance.html">
+    <meta http-equiv="refresh" content="0;url=Maintenance.html">
     <title>Journal des Modifications - Palaroad </title>
     <link rel="stylesheet" href="CSS/Journal.css">
 <header>
@@ -33,6 +33,7 @@
         <li>Ajout de nouveaux biomes : Plus de 80 nouveau biomes</li>
         <li>Introduction de nouvelles créatures : Nouveau Spawner de mob est decouverte des grotes .</li>
         <li>Nouveau Minerai multiple ( Paladium, Endium, Metal) </li>
+        <li>Plus a venir</li>
     </ul>
 </div>
 </div>
