--- a/Journal-Modif.html
+++ b/Journal-Modif.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=Maintenance.html">
+    <met http-equiv="refresh" content="0;url=Maintenance.html">
     <title>Journal des Modifications - Palaroad </title>
     <link rel="stylesheet" href="CSS/Journal.css">
 <header>
@@ -26,16 +26,19 @@
     </div>
 </div>
 
-<div class="version">
-    <h3>Version 1.1.0 <span class="date">(18 octobre 2024)</span> [Version : 1.18.2]</h3>
-    <ul>
-        <li>Lancement officiel de la version 1.18.2 du mod</li>
-        <li>Ajout de nouveaux biomes : Plus de 80 nouveau biomes</li>
-        <li>Introduction de nouvelles créatures : Nouveau Spawner de mob est decouverte des grotes .</li>
-        <li>Nouveau Minerai multiple ( Paladium, Endium, Metal) </li>
-        <li>Plus a venir</li>
-    </ul>
-</div>
+<div class="container">
+    <h2>Versions récentes</h2>
+
+    <div class="version">
+        <h3>Version 1.1.0 <span class="date">(18 octobre 2024)</span> [Version : 1.18.2]</h3>
+        <ul>
+            <li>Lancement officiel du mod !</li>
+            <li>Ajout de nouveaux biomes : Plus de 80 nouveau biomes</li>
+            <li>Introduction de nouvelles créatures : Nouveau Spawner de mob est decouverte des grotes .</li>
+            <li>Nouveau Minerai multiple ( Paladium, Endium, Metal) </li>
+            <li>Plus de nouveauter a venir</li>
+        </ul>
+    </div>
 </div>
 <div class="button-container">
  <center> <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Retourner a l'accueil </button> 
