--- a/Download.html
+++ b/Download.html
@@ -15,7 +15,7 @@
             <button class="btn btn-down" onclick="window.location.href='https://mega.nz/folder/H0M0nIZb#P70lOtcup8t_rWkNajqJng'"> Telecharger Maintenant 1.16.5   </button> 
         </div>
       <center>  <div>
-             <button class="btn btn-down2" onclick="window.location.href='https://mega.nz/folder/3gUU3ToD#THAg9LjaXlK-Zy583_MunA'"> Telecharger Maintenant 1.18.2   </button> 
+             <button class="btn btn-down2" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Maintenance'"> Telecharger Maintenant 1.18.2   </button> 
    </center>  </div>
 <br>
 <br>
