--- a/Journal-Modif.html
+++ b/Journal-Modif.html
@@ -30,13 +30,12 @@
     <h2>Versions récentes</h2>
 
     <div class="version">
-        <h3>Version 1.1.0 <span class="date">(18 octobre 2024)</span> [Version : 1.18.2]</h3>
+        <h3>Version 1.1.1 <span class="date">(21 octobre 2024)</span> [Version : 1.18.2]</h3>
         <ul>
-            <li>Lancement officiel du mod !</li>
             <li>Ajout de nouveaux biomes : Plus de 80 nouveau biomes</li>
-            <li>Introduction de nouvelles créatures : Nouveau Spawner de mob est decouverte des grotes .</li>
-            <li>Nouveau Minerai multiple ( Paladium, Endium, Metal) </li>
+            <li>Retrait du mod create (Bug)</li>
             <li>Plus de nouveauter a venir</li>
+            <li>Ajout de nombreux mod utile a la survie (Farm auto, jobs, nouveautés faune est flore est bien plus encore)</li>
         </ul>
     </div>
 </div>
