--- a/Wiki.html
+++ b/Wiki.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <met http-equiv="refresh" content="0;url=Maintenance.html">
-    <title>Journal des Modifications - Palaroad </title>
+    <title>Wiki - Palaroad</title>
     <link rel="stylesheet" href="CSS/Wiki.css">
+</head>
+<body>
+
 <header>
     <h1>Wiki - Palaroad</h1>
 </header>
@@ -13,30 +16,87 @@
 <div class="container">
     <h2>Versions récentes</h2>
 
-    <div class="version">
-    <center> <h3>Palamod <span class="date"></span> </h3> </center>
-        <ul>
-            <div class="button-container">
-                <center> <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Acceder au wiki du mod </button> 
-               </div> 
-        </ul>
-    </div>
-</div>
-<br>
-<div class="container">
-    <h2>Versions récentes</h2>
+    <!-- Section de la grille des mods -->
+    <div class="mod-grid">
+        <!-- Carte de mod #1 -->
+        <div class="mod-card">
+            <img src="https://i.imgur.com/58eGiXH.png" alt="Logo Palamod">
+            <h3>Palamod</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
 
-    <div class="version">
-    <center> <h3>Test <span class="date"></span> </h3> </center>
-        <ul>
-            <div class="button-container">
-                <center> <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Acceder au wiki du mod </button> 
-               </div> 
-        </ul>
+        <!-- Carte de mod #2 -->
+        <div class="mod-card">
+            <img src="https://i.imgur.com/QICZdBy.png" alt="Logo Security Craft Mod">
+            <h3>Security Craft</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
+
+        <div class="mod-card">
+            <img src="https://i.imgur.com/lcedKIz.png" alt="Logo Biome O Plenty Mod">
+            <h3>Biome O Plenty</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
+
+        <div class="mod-card">
+            <img src="https://i.imgur.com/aUa0PVo.png" alt="Logo Create Mod">
+            <h3>Create</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
+
+        <div class="mod-card">
+            <img src="https://i.imgur.com/CnMT5LV.png" alt="Logo Immersive Engineering Mod">
+            <h3>Immersive Engineering</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
+
+        <div class="mod-card">
+            <img src="https://i.imgur.com/iOx3yHy.png" alt="Logo Immersive Petroleum Mod">
+            <h3>Immersive Petroleum</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
+
+        <div class="mod-card">
+            <img src="https://i.imgur.com/IKxFm2T.png" alt="Logo Mythic Mounts Mod">
+            <h3>Mythic Mounts</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
+
+        <div class="mod-card">
+            <img src="https://i.imgur.com/Vxeaxqx.png" alt="Logo Better Divingt Mod">
+            <h3>Better Diving</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
+
+        <div class="mod-card">
+            <img src="https://i.imgur.com/QICZdBy.png" alt="Logo Security Craft Mod">
+            <h3>Security Craft</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
+
+        <div class="mod-card">
+            <img src="https://i.imgur.com/QICZdBy.png" alt="Logo Security Craft Mod">
+            <h3>Security Craft</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
+
+        <div class="mod-card">
+            <img src="https://i.imgur.com/QICZdBy.png" alt="Logo Security Craft Mod">
+            <h3>Security Craft</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>  
+        
+        <div class="mod-card">
+            <img src="https://i.imgur.com/QICZdBy.png" alt="Logo Security Craft Mod">
+            <h3>Security Craft</h3>
+            <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
+        </div>
     </div>
 </div>
-<div class="button-container">
- <center> <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'"> Retourner a l'accueil </button> 
-</div> 
+
+<center> <div class="button-container">
+    <button class="btn btn-Quit" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Retourner à l'accueil</button>
+</div> </center>
+
 </body>
 </html>
