Grosse Mise a jour des systeme graphique est script

--- a/Journal-Modif.html
+++ b/Journal-Modif.html
@@ -14,9 +14,10 @@
     <h2>Versions récentes</h2>
 
     <div class="version">
-        <h3>Version 1.0.0 <span class="date">(16 octobre 2024)</span> [Version : 1.16.5]</h3>
+        <h3>Version 1.0.0 <span class="date">(27 octobre 2024)</span> [Version : 1.16.5]</h3>
         <ul>
             <li>Lancement officiel du mod !</li>
+            <Li>Retrait du mod Random Patch qui fesais crash des pc qui ajoutais le mod essential</LI>
             <li>Ajout de nouveaux biomes : Plus de 80 nouveau biomes</li>
             <li>Introduction de nouvelles créatures : Nouveau Spawner de mob est decouverte des grotes .</li>
             <li>Première version stable avec toutes les fonctionnalités principales.</li>
@@ -33,6 +34,7 @@
         <h3>Version 1.1.1 <span class="date">(21 octobre 2024)</span> [Version : 1.18.2]</h3>
         <ul>
             <li>Ajout de nouveaux biomes : Plus de 80 nouveau biomes</li>
+            <li> Maintenance annoncer le 27/10/2024 [Correction de bug ajout de mod]</li>
             <li>Retrait du mod create (Bug)</li>
             <li>Plus de nouveauter a venir</li>
             <li>Ajout de nombreux mod utile a la survie (Farm auto, jobs, nouveautés faune est flore est bien plus encore)</li>
