--- a/Wiki.html
+++ b/Wiki.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="mod-card">
-            <img src="https://i.imgur.com/QICZdBy.png" alt="Logo Security Craft Mod">
+            <img src="https://i.imgur.com/QICZdBy.png" alt="Logo tWILIG Mod">
             <h3>Security Craft</h3>
             <button class="btn btn-Wiki1" onclick="window.location.href='https://tomigun212.github.io/Palaroad/'">Accéder au wiki</button>
         </div>
