Maintenance de la page principal

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <met http-equiv="refresh" content="0;url=Maintenance.html">
+    <meta http-equiv="refresh" content="0;url=Maintenance.html">
     <meta name="description" content="Découvrez Palaroad, le modpack Minecraft ultime pour une expérience de jeu unique et personnalisée !">
     <title>Palaroad Minecraft</title>
     <link rel="stylesheet" href="CSS/styles.css">
@@ -81,14 +81,18 @@
   <center> <div class="button-container">
         <button class="btn btn-journal" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Journal-Modif'"> Acceder au journal des modification  </button>
     </center>   </div> 
-    </section>
-    <footer>
+              </section>
 
-        <p><h2>Contacter - nous</h2></p>
-        <div class="button-container">
-            <button class="btn btn-Contact" onclick="window.location.href='https://tomigun212.github.io/Palaroad/contact'"> Contactez-nous  </button>
-        </div>  
-    </footer>
+    
+              <section class="join-us">
+                <h2>Nous Rejoindre</h2>
+                <br>
+                <div class="join-buttons">
+                    <a href="https://tomigun212.github.io/Palaroad/contact" class="join-link">Contact</a>
+                    <a href="https://discord.gg/uX8dNJV6vX" class="join-link discord-link" target="_blank">Rejoindre le Discord</a>
+                </div>
+            </section>
+
 
     <script src="Java/script.js"></script>
 </body>
